--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -78,6 +78,14 @@ body {
     text-base
     transition-colors
     md:text-lg;
+  background: radial-gradient(
+    ellipse at top,
+    rgba(var(--foreground-rgb), 0.03) 0.5%,
+    transparent 53%,
+    transparent 53%
+  );
+  background-position: top center;
+  background-repeat: no-repeat;
   height: 100vh;
   min-height: 100vh;
   overflow: overlay;
@@ -237,31 +245,23 @@ body {
       brightness-125
       sm:text-4xl;
   }
-}
-
-.bio,
-.post,
-.posts,
-.privacy,
-.footer,
-.not-found {
   a {
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
-    transition-duration: 500ms;
-    transition-property: color, border-color;
-    border-bottom: 1px solid rgb(var(--foreground-rgb));
-    padding-bottom: 0.125rem;
-    color: rgba(var(--foreground-rgb), 0.7);
+    color: rgba(var(--foreground-rgb), 0.77);
+    border-bottom: 1px solid rgba(var(--foreground-rgb), 0.77);
+    transition: color .5s ease-out, border-color .5s ease-out;
     &:hover,
     &:focus {
       border-color: rgb(var(--highlight-rgb));
       color: rgba(var(--highlight-rgb), 1);
     }
+  }
+}
+
+.bio,
+.privacy,
+.footer,
+.not-found {
+  a {
   }
 }
 
