--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -57,6 +57,7 @@ html {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-repeat: no-repeat;
   min-height: 100%;
   overflow: clip;
   scroll-behavior: smooth;
@@ -65,7 +66,7 @@ html {
     (-moz-touch-enabled: 1),
     (pointer: coarse) {
     overflow: auto;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: stable both-edges;
   }
 }
 
@@ -98,6 +99,7 @@ body {
     (pointer: coarse) {
     overflow: visible;
     scrollbar-gutter: auto;
+    height: 100%;
   }
   .header,
   .main,
