--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -15,12 +15,13 @@
   .post-item {
     position: relative;
     grid-column: span 6;
+    z-index: 1;
     cursor: pointer;
-    box-shadow: inset 0 0 1px rgb(var(--subdued-rgb)), 0 0 .3rem rgba(var(--black), 0.8);
+    box-shadow: inset 0 0 1px rgb(var(--subdued-rgb)),
+      0 0 0.3rem rgba(var(--black), 0.8);
     background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index: 1;
     @apply mb-0
       h-full
       list-none
@@ -121,6 +122,20 @@
         py-3
         sm:py-6
         md:py-9;
+      .link-bg {
+        align-self: center;
+        transition: background-color 0.5s ease-in-out;
+        border-radius: 1rem;
+        background-color: transparent;
+        padding: 0.5rem 2rem;
+        width: auto;
+      }
+      &:hover,
+      &:focus {
+        .link-bg {
+          background-color: rgba(var(--background-saturated), 0.5);
+        }
+      }
     }
   }
 }
@@ -134,7 +149,6 @@ html.light-theme .posts-grid {
     @apply dg--photo-link-light;
   }
 }
-  
 
 @media (prefers-color-scheme: light) {
   .posts-grid .post-link {
