--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -1,16 +1,19 @@
 .posts-grid {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
   margin: 0;
-  @apply grid
-      list-none
-      grid-cols-6
-      grid-rows-6
-      gap-3
-      self-center
-      pb-0
-      md:pb-16;
+  gap: 0.5rem;
+  list-style-type: none;
+  grid-template-row: repeat(6, minmax(0, 1fr));
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+  align-self: center;
+  padding-bottom: 0;
+  @screen sm {
+    gap: 0.5rem;
+  }
+  @screen md {
+    gap: 1rem;
+  }
+  @apply md:pb-16;
   .post-item {
     position: relative;
     grid-column: span 6;
@@ -34,11 +37,9 @@
     &:first-child {
       grid-row: span 24;
       grid-column: span 6;
-      height: 16rem;
     }
     &:first-child:last-child {
       grid-row: span 6;
-      height: 20rem;
     }
     &:nth-child(n + 2) {
       grid-row: span 24;
@@ -51,14 +52,14 @@
     }
     @screen sm {
       &:first-child {
-        grid-row: span 12;
+        grid-row: span 18;
         grid-column: span 4;
         &:last-child {
           grid-column: span 6;
         }
       }
       &:nth-child(n + 2) {
-        grid-row: span 12;
+        grid-row: span 18;
         grid-column: span 2;
       }
       &:nth-child(n + 3) {
@@ -76,6 +77,10 @@
       &:nth-child(n + 6) {
         grid-row: span 9;
         grid-column: span 2;
+      }
+      &:nth-child(n + 8) {
+        grid-row: span 9;
+        grid-column: span 4;
       }
       &:last-child:nth-child(n + 2) {
         grid-row: span 12;
@@ -99,6 +104,14 @@
       }
       &:last-child:nth-child(n + 7) {
         grid-row: span 9;
+        grid-column: span 2;
+      }
+      &:last-child:nth-child(n + 8) {
+        grid-row: span 1;
+        grid-column: span 6;
+      }
+      &:last-child:nth-child(n + 9) {
+        grid-row: span 12;
         grid-column: span 2;
       }
     }
