build(front): adds footnotes content block, styles, and content destructuring
closes #440

--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -93,6 +93,9 @@
         border-bottom: 1px solid rgba(var(--highlight-rgb), 1);
       }
     }
+    h2.footnotes-title {
+      margin-top: 3rem;
+    }
   }
   .post-aside {
     float: right;
