--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -19,6 +19,7 @@
     grid-column: span 6;
     z-index: 1;
     cursor: pointer;
+    min-height: 7rem;
     box-shadow: inset 0 0 1px rgb(var(--subdued-rgb)),
       0 0 0.3rem rgba(var(--black), 0.8);
     background-position: center top;
@@ -37,82 +38,72 @@
     &:first-child {
       grid-row: span 24;
       grid-column: span 6;
+      height: 14rem;
     }
     &:first-child:last-child {
+      grid-row: span 24;
+    }
+    &:nth-child(n + 1) {
       grid-row: span 6;
     }
     &:nth-child(n + 2) {
       grid-row: span 24;
     }
     &:nth-child(n + 3) {
-      grid-row: span 15;
+      grid-row: span 18;
     }
     &:nth-child(n + 4) {
-      grid-row: span 10;
+      grid-row: span 12;
     }
     @screen sm {
       &:first-child {
-        grid-row: span 18;
+        grid-row: span 12;
         grid-column: span 4;
         &:last-child {
+          height: 21rem;
           grid-column: span 6;
         }
       }
       &:nth-child(n + 2) {
-        grid-row: span 18;
+        grid-row: span 12;
         grid-column: span 2;
       }
       &:nth-child(n + 3) {
-        grid-row: span 12;
         grid-column: span 2;
       }
       &:nth-child(n + 4) {
-        grid-row: span 12;
         grid-column: span 4;
       }
       &:nth-child(n + 5) {
         grid-row: span 9;
         grid-column: span 2;
       }
-      &:nth-child(n + 6) {
-        grid-row: span 9;
-        grid-column: span 2;
-      }
       &:nth-child(n + 8) {
-        grid-row: span 9;
+        grid-column: span 3;
+      }
+      &:last-child:nth-child(2) {
+        grid-column: span 2;
+      }
+      &:last-child:nth-child(3) {
+        grid-column: span 6;
+      }
+      &:last-child:nth-child(4) {
         grid-column: span 4;
       }
-      &:last-child:nth-child(n + 2) {
-        grid-row: span 12;
-        grid-column: span 2;
-      }
-      &:last-child:nth-child(n + 3) {
-        grid-row: span 9;
+      &:last-child:nth-child(5) {
         grid-column: span 6;
       }
-      &:last-child:nth-child(n + 4) {
-        grid-row: span 12;
+      &:last-child:nth-child(6) {
         grid-column: span 4;
       }
-      &:last-child:nth-child(n + 5) {
-        grid-row: span 9;
+      &:last-child:nth-child(7) {
+        grid-column: span 2;
+      }
+      &:last-child:nth-child(8) {
         grid-column: span 6;
       }
-      &:last-child:nth-child(n + 6) {
-        grid-row: span 9;
-        grid-column: span 2;
-      }
-      &:last-child:nth-child(n + 7) {
-        grid-row: span 9;
-        grid-column: span 2;
-      }
-      &:last-child:nth-child(n + 8) {
-        grid-row: span 1;
-        grid-column: span 6;
-      }
-      &:last-child:nth-child(n + 9) {
-        grid-row: span 12;
-        grid-column: span 2;
+      &:last-child:nth-child(9) {
+        grid-column: span 3;
       }
     }
     .post-link {
