feat(front): adds mini `PostNav` functionality, component changes, and styles
closes #385 and #386

--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -1,3 +1,4 @@
+@import "../components/post-nav.css";
 .post {
   display: block;
   position: relative;
@@ -64,69 +65,6 @@
       z-index: 8;
     }
   }
-  .post-navigation {
-    position: absolute;
-    top: -2rem;
-    right: 0.7rem;
-    z-index: 10;
-    text-align: right;
-    @screen md {
-      display: none;
-    }
-    &-toggle {
-      display: inline-block;
-      transition: background-color, color;
-      cursor: pointer;
-      border-radius: 0.33rem;
-      background-color: rgba(var(--background-saturated), 0.5);
-      padding: 0.33rem;
-      @apply dg--transition-effect;
-      &:hover,
-      &:focus {
-        background-color: rgba(var(--background-saturated), 0.9);
-        color: rgb(var(--highlight-rgb));
-      }
-    }
-    input#post-navigation {
-      display: none;
-      ~ label {
-        position: relative;
-        z-index: 1;
-        & + .post-navigation-list {
-          display: block;
-          position: relative;
-          top: -2.6rem;
-          left: 0.33rem;
-          /* animation: fadeIn 0.5s;
-          animation-direction: reverse; */
-          opacity: 0;
-          backdrop-filter: blur(0.5rem);
-          border-radius: 0.33rem;
-          background-color: rgba(var(--background-saturated), 0.9);
-          padding: 2rem;
-          max-height: 0;
-          overflow: hidden;
-          @apply dg--transition-effect;
-        }
-      }
-      &:checked {
-        ~ label {
-          background-color: rgba(var(--background-saturated), 0);
-          & + .post-navigation-list {
-            opacity: 1;
-            animation: fadeIn 0.5s;
-            max-height: 100%;
-          }
-        }
-      }
-    }
-
-    ul {
-      li {
-        list-style-type: none;
-      }
-    }
-  }
   h1.post-title,
   .post-article,
   .post-aside,
@@ -138,9 +76,6 @@
     z-index: 5;
     padding-left: 1rem;
     text-shadow: 0 -0.11rem 1.5rem rgba(var(--background-saturated), 0.77);
-    @screen sm {
-      padding-left: 0;
-    }
   }
   .aside-toggle {
     display: inline;
@@ -160,17 +95,14 @@
   }
   .post-article {
     display: block;
-    /* transition: width; */
-    /* @apply dg--transition-effect; */
-    padding-left: 1rem;
-    padding-right: 1rem;
     float: none;
+    padding-right: 1rem;
+    padding-left: 1rem;
     width: 100%;
     @screen sm {
       float: left;
-      width: 75%;
       padding-right: 0.5rem;
-      padding-left: 0;
+      width: 75%;
     }
     a {
       border-bottom: 1px solid rgba(var(--text-accent-rgb), 0.67);
@@ -186,9 +118,16 @@
   .post-aside {
     display: none;
     opacity: 0.8;
-    padding-left: 0.5rem;
+    padding: 0 1rem;
     width: 0;
     text-align: right;
+    h2 {
+      font-size: 1.77rem;
+    }
+    li {
+      font-size: 0.875rem;
+      list-style-type: none;
+    }
     /* &.show {
       display: block;
       width: 25%;
@@ -197,25 +136,10 @@
       display: block;
       float: right;
       width: 25%;
+      h2 {
+        font-size: 1.33rem;
+        line-height: 1.33;
+      }
     }
-    h2 {
-      font-size: 1.77rem;
-    }
-    li {
-      font-size: 0.875rem;
-      list-style-type: none;
-    }
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    max-height: 0;
-  }
-
-  to {
-    opacity: 1;
-    max-height: 100%;
   }
 }
