build(front): adds columns to posts page summary

--- a/front/src/lib/styles/pages/posts.css
+++ b/front/src/lib/styles/pages/posts.css
@@ -95,8 +95,13 @@
     text-align: center;
   }
   .summary {
-    margin: auto;
+    margin: auto auto 2rem;
     max-width: 77%;
+    column-count: 2;
+    column-gap: 3.33rem;
+    p {
+      margin: 0 auto;
+    }
   }
 }
 
