--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -113,10 +113,11 @@ body {
   }
   &.ready {
     > div > .flourish {
-      transform: translateY(-100%);
-      transition: transform 0.5s;
+      max-height: 0;
+      transition: max-height 0.5s;
       transition-delay: 2s;
       box-shadow: none !important;
+      z-index: 0;
       @apply shadow-none;
     }
     .main section .flourish,
@@ -136,8 +137,8 @@ body {
     &.animating {
       overflow: hidden;
       > div > .flourish {
-        transform: translateY(0);
-        transition: transform 0s;
+        max-height: 0.5rem;
+        transition: max-height 0s;
         transition-delay: 0s;
         box-shadow: none !important;
         @apply shadow-none;
