fix(front): adds missing classes to `noscript.css`
fixes #474

--- a/front/static/styles/noscript.css
+++ b/front/static/styles/noscript.css
@@ -1,6 +1,10 @@
 body .flourish,
 body .header,
 body .main,
+body .bio,
+body .main,
+body .main .flourish,
+body .main section,
 body .footer {
   opacity: 1 !important;
 }
