--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -104,6 +104,22 @@
       padding-right: 0.5rem;
       width: 75%;
     }
+    .summary {
+      @apply dg--font-lb;
+      font-size: 1.2rem;
+      padding: 2rem;
+      text-indent: 0;
+      text-wrap: pretty;
+      &::first-letter {
+        @apply dg--font-lbb;
+        /* font-style: italic; */
+        font-size: 2rem;
+        line-height: 1;
+        padding-right: 0.12rem;
+        float: left;
+        margin-left: -0.5rem;
+      }
+    }
     a {
       border-bottom: 1px solid rgba(var(--text-accent-rgb), 0.67);
       &:hover,
